--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,4 +1,4 @@
-name: CICD Workflow
+name: Node.js CI
 
 on:
   push:
@@ -30,16 +30,8 @@ jobs:
       - name: Build the project
         run: npm run build --if-present
 
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: build-artifacts
-          path: ./
-          retention-days: 1
-
   test:
     runs-on: ubuntu-latest
-    needs: build
 
     strategy:
       matrix:
@@ -55,11 +47,8 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
 
-      - name: Download build artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: build-artifacts
-          path: ./
+      - name: Install dependencies
+        run: npm ci
 
       - name: Run tests
         run: npm test
