--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -28,18 +28,18 @@ name: Deploy to Amazon ECS
 
 on:
   push:
-    branches: ['main']
+    branches: ['main', 'feat/add-workflow']
 
 env:
   AWS_REGION: eu-central-1 # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: demo-repo # set this to your Amazon ECR repository name
-  ECS_SERVICE: MY_ECS_SERVICE # set this to your Amazon ECS service name
-  ECS_CLUSTER: MY_ECS_CLUSTER # set this to your Amazon ECS cluster name
+  ECR_REPOSITORY: rbp-app # set this to your Amazon ECR repository name
+  ECS_SERVICE: rbp-app-service # set this to your Amazon ECS service name
+  ECS_CLUSTER: RbpAppCluster # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION:
-    MY_ECS_TASK_DEFINITION # set this to the path to your Amazon ECS task definition
+    rbp-app-task-definition.json # set this to the path to your Amazon ECS task definition
     # file, e.g. .aws/task-definition.json
   CONTAINER_NAME:
-    MY_CONTAINER_NAME # set this to the name of the container in the
+    rpb-app # set this to the name of the container in the
     # containerDefinitions section of your task definition
 
 permissions:
@@ -56,7 +56,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -94,57 +94,3 @@ jobs:
           service: ${{ env.ECS_SERVICE }}
           cluster: ${{ env.ECS_CLUSTER }}
           wait-for-service-stability: true
-# name: Node.js CI
-
-# on:
-#   push:
-#     branches: ['main', 'feat/*']
-#   pull_request:
-#     branches: ['main']
-
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
-
-#     strategy:
-#       matrix:
-#         node-version: [20.x]
-
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v4
-
-#       - name: Set up Node.js ${{ matrix.node-version }}
-#         uses: actions/setup-node@v3
-#         with:
-#           node-version: ${{ matrix.node-version }}
-#           cache: 'npm'
-
-#       - name: Install dependencies
-#         run: npm ci
-
-#       - name: Build the project
-#         run: npm run build --if-present
-
-#   test:
-#     runs-on: ubuntu-latest
-
-#     strategy:
-#       matrix:
-#         node-version: [20.x]
-
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v4
-
-#       - name: Set up Node.js ${{ matrix.node-version }}
-#         uses: actions/setup-node@v3
-#         with:
-#           node-version: ${{ matrix.node-version }}
-#           cache: 'npm'
-
-#       - name: Install dependencies
-#         run: npm ci
-
-#       - name: Run tests
-#         run: npm test
