--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -44,8 +44,9 @@ jobs:
         id: assume-role
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          aws-role-to-assume: ${{ env.AWS_ROLE_ARN }}
+          role-to-assume: ${{ env.AWS_ROLE_ARN }}
           aws-region: ${{ env.AWS_REGION }}
+          role-session-name: 'GitHubActions-DeployToECS'
 
       - name: Login to Amazon ECR
         id: login-ecr
