--- a/.github/workflows/infrastructure.yaml
+++ b/.github/workflows/infrastructure.yaml
@@ -26,9 +26,6 @@ jobs:
         run: cd infrastructure/aws-cdk-fargate/
 
       - name: Deploy LambdaStack (via CDK)
-        uses: youyo/aws-cdk-github-actions@v2
-        with:
-          cdk_subcommand: 'deploy'
-          cdk_stack: 'LambdaStack'
-          cdk_args: '--require-approval never' # This is a toy example, so we don't need to approve changes
-          actions_comment: false
+        run: |
+          cd infrastructure/aws-cdk-fargate && \
+          npx cdk deploy LambdaStack --require-approval never
