--- a/.github/workflows/infrastructure.yaml
+++ b/.github/workflows/infrastructure.yaml
@@ -27,5 +27,5 @@ jobs:
         with:
           cdk_subcommand: 'deploy'
           cdk_stack: 'LambdaStack'
-          cdk_args: '--app "npx ts-node --prefer-ts-exts bin/aws-cdk-fargate.ts" --require-approval never' # This is a toy example, so we don't need to approve changes
+          cdk_args: "--app 'npx ts-node --prefer-ts-exts bin/aws-cdk-fargate.ts' --require-approval never"
           actions_comment: false
