use working_dir

--- a/.github/workflows/infrastructure.yaml
+++ b/.github/workflows/infrastructure.yaml
@@ -25,6 +25,9 @@ jobs:
       - name: Deploy LambdaStack (via CDK)
         uses: youyo/aws-cdk-github-actions@v2
         with:
+          run: cd infrastructure/aws-cdk-fargate/
           cdk_subcommand: 'deploy'
           cdk_stack: 'LambdaStack'
-          cdk_args: '--app \'npx ts-node --prefer-ts-exts infrastructure/aws-cdk-fargate/bin/aws-cdk-fargate.ts\' --require-approval never'          actions_comment: false
+          cdk_args: '--require-approval never' # This is a toy example, so we don't need to approve changes
+          actions_comment: false
+          working_dir: './infrastructure/aws-cdk-fargate'
